--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 NODE_ENV = development
-PORT = 5000
-MONGO_URI = mongodb+srv://vaibhav1234:vaibhav1234@goalscluster.vo4df78.mongodb.net/goalsApp?retryWrites=true&w=majority
+PORT = 3001
+MONGO_URI = mongodb+srv://metachat:khuljametachat@metachat.kak00rb.mongodb.net/metaChat?retryWrites=true&w=majority
